# Matroid10

./: .gitignore  README.md  pyproject.toml
configs/: default.toml
cpp/: CMakeLists.txt
cpp/src/: gen_nonpaving.cpp
docs/: neuro_symbolic.md  pipeline.md  repro.md  schema.md
python/: __init__.py  attach_pure_o_witnesses.py  cleanup_artifacts.py  common.py  extract_deduplicated_results.py  hardness_benchmark.py  hardness_metrics.py  hvec_extract.py  neuro_symbolic_search.py  pure_o_cp.py  pure_o_top_level_cp.py  run_pipeline.py  search_progress.py
python/neuro_symbolic/: __init__.py  actions.py  bootstrap.py  budgeting.py  canonicalize.py  controller.py  eval.py  features.py  policies.py  policy_data.py  problem_spec.py  queues.py  replay.py  state_graph.py  store.py  (+1 more)
scripts/: build_cpp.sh  run_smoke.sh  run_sparse_paving_recovery.sh  setup_wsl.sh
tests/: test_attach_pure_o_witnesses.py  test_cleanup_artifacts.py  test_extract_deduplicated_results.py  test_hardness_benchmark.py  test_hvec_helpers.py  test_neuro_symbolic_bootstrap.py  test_neuro_symbolic_budgeting.py  test_neuro_symbolic_canonicalize.py  test_neuro_symbolic_cli.py  test_neuro_symbolic_controller.py  test_neuro_symbolic_eval.py  test_neuro_symbolic_features.py  test_neuro_symbolic_policy_data.py  test_neuro_symbolic_representable_actions.py  test_neuro_symbolic_sparse_paving_actions.py  test_neuro_symbolic_state_graph.py  test_neuro_symbolic_types.py  test_pure_o_cp.py  test_run_pipeline_config.py  test_run_pipeline_sharding.py  test_search_progress.py  test_web_dedup.py  test_web_state.py
(+13 files in other folders)
